Update project.scss for fixing accordion visibility-hidden in firefox

--- a/transit_odp/frontend/assets/sass/project.scss
+++ b/transit_odp/frontend/assets/sass/project.scss
@@ -139,3 +139,7 @@ fieldset {
 .border-bottom-custom {
   border-bottom: $govuk-accordion-bottom-border-width solid $govuk-border-colour;
 }
+
+.govuk-accordion__section-content[hidden] {
+  display: none !important;
+}
